[tool.poetry]
name = "base_bot"
version = "0.1.0"
description = ""
authors = ["tank <jeremydrodrigues@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
paramiko = "^2.4"
scp = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
